# hikari_lighting

./: .gitignore  CMakeLists.txt  west.yml
applications/hikari_sword/: CMakeLists.txt  README.rst  hikari_light_mode_iterables.ld  prj.conf  sample.yaml
applications/hikari_sword/include/: hikari_light.h  hikari_light_ble.h  light_resource.h
applications/hikari_sword/src/: ble.c  hikari_light.c  hikari_light_ble.c  light_resource.c  main.c
applications/hikari_sword/src/modes/: default_resources.h  glow.c  off.c  sole.c  wave.c
applications/simple_blinking/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
applications/simple_blinking/src/: main.c
include/: adrledrgb.h  bit_base.h  glow_func.h  rgb_hsv.h  slab.h  slab_base.h  slab_event.h  wave_func.h
include/slabs/: slab_delay.h  slab_glower.h  slab_hsv2rgb.h  slab_led.h  slab_notifier.h  slab_rgb2hsv.h  slab_ticker.h  slab_waver.h
lib/: CMakeLists.txt  Kconfig
lib/adrledrgb/: CMakeLists.txt  Kconfig  adrledrgb.c
lib/bit_base/: CMakeLists.txt  bit_base.c
lib/funcs/: CMakeLists.txt  glow_func.c  wave_func.c
lib/hsm/: CMakeLists.txt  Kconfig  hsm.c  hsm.h
lib/msgport/: CMakeLists.txt  Kconfig  msgport.c  msgport.h
lib/rbuf/: CMakeLists.txt  Kconfig  rbuf.c  rbuf.h
lib/refctr/: CMakeLists.txt  refctr.c  refctr.h
lib/reqw/: reqw.c  reqw.h
lib/rgb_hsv/: CMakeLists.txt  rgb_hsv.c
lib/slab/: CMakeLists.txt  slab.c  slab_delay.c  slab_event.c  slab_glower.c  slab_hsv2rgb.c  slab_led.c  slab_notifier.c  slab_rgb2hsv.c  slab_ticker.c  slab_waver.c
lib/slab/events/: slab_event_hsv.h  slab_event_reset.h  slab_event_rgb.h  slab_event_tick.h
lib/slab_base/: CMakeLists.txt  slab_base.c
tests/bit_base/: CMakeLists.txt
tests/cms/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/cms/src/: main.c
tests/fundamentals/: CMakeLists.txt  prj.conf  testcase.yaml
tests/fundamentals/src/: main.c
tests/hsm/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/hsm/src/: hsm_test.c
tests/rbuf/: CMakeLists.txt  prj.conf  testcase.yaml
tests/rbuf/src/: rbuf_test.c
tests/refctr/: CMakeLists.txt  testcase.yaml
tests/refctr/src/: refctr_test.c
tests/slab/: CMakeLists.txt  Kconfig  testcase.yaml
tests/slab/src/: slab_test.c
tests/slab_base/: CMakeLists.txt  Kconfig  testcase.yaml
tests/slab_delay/: CMakeLists.txt  Kconfig  testcase.yaml
tests/slab_delay/src/: slab_delay_test.c
tests/slab_glower/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/slab_glower/src/: slab_glower_test.c
tests/slab_glower/unity/: CMakeLists.txt  testcase.yaml
tests/slab_glower/unity/src/: slab_glower_test.c
tests/slab_glower/ztest/: CMakeLists.txt  prj.conf  testcase.yml
tests/slab_glower/ztest/src/: main.c
tests/slab_led/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/slab_led/src/: slab_led_test.c
tests/slab_ticker/ztest/: CMakeLists.txt  prj.conf  testcase.yml
tests/slab_ticker/ztest/src/: main.c
zephyr/: module.yml
